--- a/dusk-deploy-cli/Cargo.toml
+++ b/dusk-deploy-cli/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 #dusk-pki = "0.13"
 #dusk-bls12_381 = "0.12"
 #toml-base-config = "0.1"
-#clap = { version = "4.0", features = ["derive", "env"] }
+clap = { version = "4.0", features = ["derive", "env"] }
 tokio = { version = "1.21", features = ["full"] }
 #tracing = "0.1"
 #tracing-subscriber = "0.3"
