--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["dusk-deploy-cli", "wallet-accessor"]
-workspace.resolver = "2"
+members = ["dusk-deploy-cli", "wallet"]
+resolver = "2"
