--- a/dusk-deploy-cli/Cargo.toml
+++ b/dusk-deploy-cli/Cargo.toml
@@ -13,19 +13,20 @@ toml-base-config = "0.1"
 #phoenix-core = { version = "0.21", features = ["alloc"] }
 execution-core = { path = "../../rusk/execution-core" }
 rusk-prover = { path = "../../rusk/rusk-prover" }
+poseidon-merkle = "0.3"
 
 clap = { version = "4.0", features = ["derive", "env"] }
 tokio = { version = "1.21", features = ["full"] }
 #tracing = "0.1"
 #tracing-subscriber = "0.3"
-#rand = "0.8"
+rand = "0.8"
 #requestty = "0.4.1"
 hex = "0.4"
 #dusk-bytes = "0.1"
 #group = "0.13"
 #bytes = "1.4"
 #futures-core = "0.3"
-#reqwest = "0.11"
+reqwest = "0.11"
 #bytecheck = "0.6"
 #sha3 = "0.10"
 #bs58 = "0.4"
