--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -16,6 +16,7 @@ dusk-plonk = { version = "0.19", default-features = false }
 rkyv = { version = "0.7", default-features = false }
 rusk-prover = { version = "0.3.0", path = "../../rusk/rusk-prover", default-features = false }
 ff = { version = "0.13", default-features = false }
+hex = "0.4"
 
 # rusk dependencies
 rusk-abi = { version = "0.13.0-rc", path = "../../rusk/rusk-abi", default-features = false }
