--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -14,13 +14,13 @@ dusk-poseidon = { version = "0.39", default-features = false }
 poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }
 dusk-plonk = { version = "0.19", default-features = false }
 rkyv = { version = "0.7", default-features = false }
-rusk-prover = { version = "0.3.0", path = "../../rusk/rusk-prover", default-features = false }
+rusk-prover = { version = "0.3.0", path = "../../../rust/rusk/rusk-prover", default-features = false }
 ff = { version = "0.13", default-features = false }
 hex = "0.4"
 
 # rusk dependencies
-rusk-abi = { version = "0.13.0-rc", path = "../../rusk/rusk-abi", default-features = false }
-execution-core = { version = "0.1.0", path = "../../rusk/execution-core" }
+rusk-abi = { version = "0.13.0-rc", path = "../../../rust/rusk/rusk-abi", default-features = false }
+execution-core = { version = "0.1.0", path = "../../../rust/rusk/execution-core" }
 
 [dev-dependencies]
 rand = "^0.8"
