--- a/rusk-http-client/Cargo.toml
+++ b/rusk-http-client/Cargo.toml
@@ -16,3 +16,6 @@ execution-core = { path = "../../rusk/execution-core" }
 tokio = { version = "1.21", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 hex = "0.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+serde_with = { version = "3", features = ["hex"] }
