migration to Rusk bb64b3d

--- a/dusk-deploy-cli/Cargo.toml
+++ b/dusk-deploy-cli/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 [dependencies]
 wallet = { path = "../wallet" }
 rusk-http-client = { path = "../rusk-http-client" }
-execution-core = { version = "0.1.0", path = "../../../rust/rusk/execution-core" }
-rusk-prover = { version = "0.3.0", path = "../../../rust/rusk/rusk-prover" }
+execution-core = { version = "0.1.0", path = "../../../rust2/rusk/execution-core" }
+rusk-prover = { version = "0.3.0", path = "../../../rust2/rusk/rusk-prover" }
 tiny-bip39 = "0.8"
-dusk-bls12_381 = "0.12"
-dusk-plonk = "0.19"
-poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }
+dusk-bls12_381 = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
+dusk-plonk = "0.20"
+poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
 dusk-bytes = "0.1"
 tokio-stream = { version = "0.1", features = ["sync"] }
 tokio = { version = "1.21", features = ["full"] }
