--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -6,15 +6,16 @@ description = "Private wallet used for deploy CLI"
 license = "MPL-2.0"
 
 [dependencies]
+phoenix-core = { version = "0.32", default-features = false, features = ["rkyv-impl", "alloc"] }
 rand_core = "^0.6"
 rand_chacha = { version = "^0.3", default-features = false }
 sha2 = { version = "^0.10", default-features = false }
 dusk-bytes = "^0.1"
-dusk-poseidon = { version = "0.39", default-features = false }
-poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }
-dusk-plonk = { version = "0.19", default-features = false }
+dusk-poseidon = { version = "0.40", default-features = false }
+poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
+dusk-plonk = { version = "0.20", default-features = false }
 rkyv = { version = "0.7", default-features = false }
-rusk-prover = { version = "0.3.0", path = "../../../rust/rusk/rusk-prover", default-features = false }
+rusk-prover = { version = "0.3.0", path = "../../../rust2/rusk/rusk-prover", default-features = false }
 ff = { version = "0.13", default-features = false }
 hex = "0.4"
 bs58 = "0.4"
@@ -22,7 +23,7 @@ thiserror = "1.0"
 rand = "^0.8"
 
 # rusk dependencies
-execution-core = { version = "0.1.0", path = "../../../rust/rusk/execution-core" }
+execution-core = { version = "0.1.0", path = "../../../rust2/rusk/execution-core" }
 
 [dev-dependencies]
 rand = "^0.8"
