--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -6,13 +6,14 @@ description = "Private wallet used for deploy CLI"
 license = "MPL-2.0"
 
 [dependencies]
+phoenix-core = { version = "0.32", default-features = false, features = ["rkyv-impl", "alloc"] }
 rand_core = "^0.6"
 rand_chacha = { version = "^0.3", default-features = false }
 sha2 = { version = "^0.10", default-features = false }
 dusk-bytes = "^0.1"
 dusk-poseidon = { version = "0.39", default-features = false }
-poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }
-dusk-plonk = { version = "0.19", default-features = false }
+poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
+dusk-plonk = { version = "0.20", default-features = false }
 rkyv = { version = "0.7", default-features = false }
 rusk-prover = { version = "0.3.0", path = "../../rusk/rusk-prover", default-features = false }
 ff = { version = "0.13", default-features = false }
