--- a/dusk-deploy-cli/Cargo.toml
+++ b/dusk-deploy-cli/Cargo.toml
@@ -9,7 +9,7 @@ rusk-http-client = { path = "../rusk-http-client" }
 execution-core = { version = "0.1.0", path = "../../rusk/execution-core" }
 rusk-prover = { version = "0.3.0", path = "../../rusk/rusk-prover" }
 tiny-bip39 = "0.8"
-dusk-bls12_381 = "0.12"
+dusk-bls12_381 = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
 dusk-plonk = "0.20"
 poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
 dusk-bytes = "0.1"
