--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-rusk_address = "https://devnet.nodes.dusk.network"
-#rusk_address = "http://127.0.0.1:8080"
+#rusk_address = "https://devnet.nodes.dusk.network"
+rusk_address = "http://127.0.0.1:8080"
 prover_address = "http://127.0.0.1:8080"
